# daga2026_dode

./: CITATION.cff  LICENSE  README.md  check_Ynm_Pnm.py  check_spharpy.py  dipole_velocity_from_two_caps.py  dodecahedron_pressure_irs.py  dodecahedron_sphere.py  dodecahedron_vn.py  pyproject.toml  radial_filter_bank.py  radial_filter_ground_truth.py  run_all.py  util_cap.py  util_fa23.py
